--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ body {
   font-family: Product Sans;
   scroll-behavior: smooth;
   overflow-y: hidden;
-  background: url("../assets/pretty-heroic@1920x1080px.png") 0;
+  background: url("https://milindgoel15.github.io/Assets/pretty-heroic@1920x1080px.png") 0;
   background-repeat: repeat;
 }
 
