--- a/main.scss
+++ b/main.scss
@@ -59,7 +59,7 @@ body {
     font-family: Product Sans;
     scroll-behavior: smooth;
     overflow-y: hidden;
-    background: url("Assets/pretty-heroic@1920x1080px.png") 0;
+    background: url("/Assets/pretty-heroic@1920x1080px.png") 0;
     background-repeat: repeat;
 }
 
