--- a/main.scss
+++ b/main.scss
@@ -147,3 +147,28 @@ a {
         margin-top: 6rem;
     }
 }
+
+.contactContainer {
+    height: 132vh;
+
+    .grid {
+        .contactsGrid {
+            margin-top: 5rem;
+            width: 30rem;
+            height: 10rem;
+            text-align: left;
+            position: relative;
+            top: 0px;
+
+            &:hover {
+                top: -4px;
+                transition: 0.35s all ease-in-out 0s;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.315), 0 6px 6px rgba(0, 0, 0, 0.205);
+            }
+        }
+    }
+
+    .footer {
+        margin-top: 6rem;
+    }
+}
