add backup fonts

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,7 +51,7 @@ html,body {
 }
 
 body {
-    font-family: Raisonne;
+    font-family: 'Raisonne', 'Open Sans', sans-serif;
     scroll-behavior: smooth;
     overflow-y: hidden;
     background: var(--background);
