add swap font property

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
     font-family: 'Raisonne';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url(../fonts/raisonne.woff) format('woff');
 }
 
