--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -767,6 +767,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-family: 'Raisonne';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url(../fonts/raisonne.woff) format('woff');
 }
 :root {
