--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -768,7 +768,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(../fonts/raisonne.woff) format('woff');
+    src: url(../fonts/raisonne.woff) format('woff'), url(../fonts/raisonne.woff2) format('woff2');
 }
 :root {
     --background: #14161a;
@@ -780,6 +780,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin: 0;
     box-sizing: border-box;
 }
+/* custom scrollbar */
 ::-webkit-scrollbar {
     width: 16px;
 }
@@ -799,13 +800,14 @@ html {
     scrollbar-width: thin;
     scrollbar-color: var(--accent-color) var(--background);
 }
+/* custom scrollbar */
 html,body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
 }
 body {
-    font-family: 'Raisonne', 'Open Sans', sans-serif;
+    font-family: 'Raisonne', Ubuntu, 'Open Sans', sans-serif;
     scroll-behavior: smooth;
     overflow-y: hidden;
     background: var(--background);
@@ -815,6 +817,7 @@ body {
 a {
     text-decoration: none;
 }
+/* loader */
 .loading-screen {
     position: relative;
     padding-left: 0;
@@ -834,6 +837,7 @@ a {
     z-index: 10;
     pointer-events: none;
 }
+/* loader */
 @-webkit-keyframes progress-animation {
     0% {
         background-position: 100%;
