--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -619,9 +619,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden {
   overflow: hidden;
 }
-.scroll-smooth {
-  scroll-behavior: smooth;
-}
 .rounded {
   border-radius: 0.25rem;
 }
@@ -824,8 +821,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    cursor: none;
+    scroll-behavior: smooth;
 }
+html * {cursor:none}
 /* custom scrollbar */
 ::-webkit-scrollbar {
     width: 16px;
