--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -469,11 +469,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[-400px\] {
   top: -400px;
 }
-.top-0 {
-  top: 0px;
-}
 .top-\[95px\] {
   top: 95px;
+}
+.top-0 {
+  top: 0px;
 }
 .z-\[1\] {
   z-index: 1;
@@ -551,11 +551,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-64 {
   height: 16rem;
 }
+.h-\[16rem\] {
+  height: 16rem;
+}
 .h-\[17rem\] {
   height: 17rem;
-}
-.min-h-screen {
-  min-height: 100vh;
 }
 .w-full {
   width: 100%;
@@ -770,9 +770,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .opacity-0 {
   opacity: 0;
 }
-.opacity-100 {
-  opacity: 1;
-}
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -905,6 +902,32 @@ a {
 .logoHover:hover {
         fill: #0e73e6;
     }
+@-webkit-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(35%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(35%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@media screen and (max-width: 768px) {   
+    .fadeInUp {
+        -webkit-animation: fadeInUp 1s;
+                animation: fadeInUp 1s;
+    }
+}
 .cursor-dot {
     width: 8px;
     height: 8px;
@@ -964,28 +987,73 @@ a {
 }
 @media (min-width: 640px) {
 
-  .sm\:ml-8 {
-    margin-left: 2rem;
+  .sm\:order-1 {
+    order: 1;
+  }
+
+  .sm\:order-4 {
+    order: 4;
+  }
+
+  .sm\:order-2 {
+    order: 2;
+  }
+
+  .sm\:order-3 {
+    order: 3;
+  }
+
+  .sm\:order-5 {
+    order: 5;
+  }
+
+  .sm\:mx-14 {
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }
+
+  .sm\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .sm\:ml-0 {
     margin-left: 0px;
   }
 
-  .sm\:mt-20 {
-    margin-top: 5rem;
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
 
-  .sm\:h-60 {
-    height: 15rem;
+  .sm\:mt-12 {
+    margin-top: 3rem;
   }
 
-  .sm\:w-\[30rem\] {
-    width: 30rem;
+  .sm\:h-72 {
+    height: 18rem;
   }
 
-  .sm\:w-\[32rem\] {
-    width: 32rem;
+  .sm\:w-80 {
+    width: 20rem;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:gap-8 {
+    gap: 2rem;
+  }
+
+  .sm\:gap-6 {
+    gap: 1.5rem;
   }
 
   .sm\:px-10 {
@@ -1023,6 +1091,11 @@ a {
     margin-bottom: 2rem;
   }
 
+  .md\:my-24 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+  }
+
   .md\:ml-0 {
     margin-left: 0px;
   }
@@ -1035,8 +1108,8 @@ a {
     display: none;
   }
 
-  .md\:h-64 {
-    height: 16rem;
+  .md\:h-72 {
+    height: 18rem;
   }
 
   .md\:w-auto {
@@ -1080,14 +1153,6 @@ a {
     padding-left: 0px;
   }
 
-  .md\:pl-2\.5 {
-    padding-left: 0.625rem;
-  }
-
-  .md\:pl-2 {
-    padding-left: 0.5rem;
-  }
-
   .md\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -1114,23 +1179,45 @@ a {
 }
 @media (min-width: 1024px) {
 
+  .lg\:order-1 {
+    order: 1;
+  }
+
+  .lg\:order-2 {
+    order: 2;
+  }
+
+  .lg\:order-3 {
+    order: 3;
+  }
+
+  .lg\:order-4 {
+    order: 4;
+  }
+
+  .lg\:order-5 {
+    order: 5;
+  }
+
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
   }
 
-  .lg\:mx-80 {
-    margin-left: 20rem;
-    margin-right: 20rem;
-  }
-
-  .lg\:mx-110 {
-    margin-left: 30rem;
-    margin-right: 30rem;
-  }
-
   .lg\:ml-20 {
     margin-left: 5rem;
+  }
+
+  .lg\:h-64 {
+    height: 16rem;
+  }
+
+  .lg\:w-\[30rem\] {
+    width: 30rem;
+  }
+
+  .lg\:w-\[32rem\] {
+    width: 32rem;
   }
 
   .lg\:grid-flow-col {
@@ -1145,17 +1232,34 @@ a {
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:gap-4 {
-    gap: 1rem;
+  .lg\:gap-12 {
+    gap: 3rem;
   }
 
   .lg\:gap-5 {
     gap: 1.25rem;
   }
 
+  .lg\:gap-8 {
+    gap: 2rem;
+  }
+
   .lg\:px-9 {
     padding-left: 2.25rem;
     padding-right: 2.25rem;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:pl-2\.5 {
+    padding-left: 0.625rem;
+  }
+
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .lg\:text-8xl {
@@ -1164,6 +1268,21 @@ a {
   }
 }
 @media (min-width: 1280px) {
+
+  .xl\:mx-110 {
+    margin-left: 30rem;
+    margin-right: 30rem;
+  }
+
+  .xl\:mx-40 {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
+  .xl\:mx-80 {
+    margin-left: 20rem;
+    margin-right: 20rem;
+  }
 
   .xl\:my-14 {
     margin-top: 3.5rem;
@@ -1183,5 +1302,22 @@ a {
   .xl\:py-7 {
     padding-top: 1.75rem;
     padding-bottom: 1.75rem;
+  }
+}
+@media (min-width: 1536px) {
+
+  .\32xl\:mx-80 {
+    margin-left: 20rem;
+    margin-right: 20rem;
+  }
+
+  .\32xl\:mx-110 {
+    margin-left: 30rem;
+    margin-right: 30rem;
+  }
+
+  .\32xl\:mx-128 {
+    margin-left: 40rem;
+    margin-right: 40rem;
   }
 }
