--- a/styles/main.scss
+++ b/styles/main.scss
@@ -129,7 +129,7 @@ a {
     height: 8px;
     background-color: white;
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     border-radius: 50%;
@@ -143,7 +143,7 @@ a {
     height: 50px;
     border: 1px solid white;
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     border-radius: 50%;
