--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -933,7 +933,7 @@ a {
     height: 8px;
     background-color: white;
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     border-radius: 50%;
@@ -947,7 +947,7 @@ a {
     height: 50px;
     border: 1px solid white;
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     border-radius: 50%;
