--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -504,6 +504,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-24 {
   margin-top: 6rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
 .mt-20 {
   margin-top: 5rem;
 }
@@ -512,9 +515,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-12 {
   margin-top: 3rem;
-}
-.ml-4 {
-  margin-left: 1rem;
 }
 .block {
   display: block;
@@ -638,6 +638,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-primary {
+  background-color: rgb(20 22 26 / 0.9);
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -772,6 +775,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.backdrop-blur {
+  --tw-backdrop-blur: blur(8px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -784,11 +792,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-350 {
-  transition-duration: 350ms;
-}
 .duration-300 {
   transition-duration: 300ms;
+}
+.duration-400 {
+  transition-duration: 400ms;
 }
 .duration-200 {
   transition-duration: 200ms;
@@ -849,8 +857,6 @@ body {
     scroll-behavior: smooth;
     overflow-y: hidden;
     background: var(--background);
-    background-blend-mode: overlay, hard-light, normal;
-    background-repeat: repeat;
 }
 a {
     text-decoration: none;
