--- a/styles/tailwindoutput.css
+++ b/styles/tailwindoutput.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.0.18 | MIT License | https://tailwindcss.com
+! tailwindcss v3.0.23 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -457,6 +457,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     max-width: 1536px;
   }
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .absolute {
   position: absolute;
 }
@@ -478,17 +481,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-\[1\] {
   z-index: 1;
 }
+.-z-10 {
+  z-index: -10;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .my-10 {
   margin-top: 2.5rem;
@@ -498,14 +504,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+.ml-4 {
+  margin-left: 1rem;
+}
+.-ml-56 {
+  margin-left: -14rem;
+}
 .mt-5 {
   margin-top: 1.25rem;
 }
+.ml-180 {
+  margin-left: 75rem;
+}
 .mt-24 {
   margin-top: 6rem;
-}
-.ml-4 {
-  margin-left: 1rem;
 }
 .mt-20 {
   margin-top: 5rem;
@@ -515,6 +527,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-12 {
   margin-top: 3rem;
+}
+.ml-162 {
+  margin-left: 62rem;
+}
+.ml-174 {
+  margin-left: 68rem;
+}
+.ml-24 {
+  margin-left: 6rem;
 }
 .block {
   display: block;
@@ -532,6 +553,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-24 {
   height: 6rem;
+}
+.h-96 {
+  height: 24rem;
 }
 .h-40 {
   height: 10rem;
@@ -619,28 +643,31 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded {
   border-radius: 0.25rem;
 }
-.rounded-md {
-  border-radius: 0.375rem;
-}
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .rounded-\[3px\] {
   border-radius: 3px;
 }
+.border-2 {
+  border-width: 2px;
+}
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
 .border-transparent {
   border-color: transparent;
 }
-.bg-\[\#14161a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 22 26 / var(--tw-bg-opacity));
+.bg-primary {
+  background-color: rgb(20 22 26 / 0.9);
 }
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-.bg-primary {
-  background-color: rgb(20 22 26 / 0.9);
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -702,9 +729,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
 }
 .pt-1\.5 {
   padding-top: 0.375rem;
@@ -792,11 +816,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-300 {
-  transition-duration: 300ms;
-}
 .duration-400 {
   transition-duration: 400ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
 }
 .duration-200 {
   transition-duration: 200ms;
@@ -942,8 +966,7 @@ a {
     border-radius: 50%;
     opacity: 0;
     transform: translate(-50%, -50%);
-    transition: opacity 0.3s ease-in-out,
-                transform 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 .cursor-dot-outline {
     width: 50px;
@@ -956,8 +979,7 @@ a {
     border-radius: 50%;
     opacity: 0;
     transform: translate(-50%, -50%);
-    transition: opacity 0.3s ease-in-out,
-                transform 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 .hover\:-top-1:hover {
   top: -0.25rem;
@@ -1130,10 +1152,6 @@ a {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:pl-0 {
-    padding-left: 0px;
   }
 
   .md\:text-6xl {
